# lakehouse

./: .gitignore
databases/postgres/: docker-compose.yml
editors/: docker-compose.yaml
editors/cloudbeaver/: docker-compose.yaml
images/: skaffold.yaml
images/dockerfiles/: Dockerfile
mekong/: BUILD  OWNERS  deploy-permission.yaml  requirements.in  requirements.txt
mekong/airflow/: OWNERS
mekong/airflow/dockerfiles/: airflow.dockerfile  requirements.txt
mekong/cloudfunctions/: pyproject.toml
mekong/cloudfunctions/app/: main.py
mekong/cloudfunctions/cloudrun-deploy/: skaffold-cloudfunctions.yaml
mekong/cloudfunctions/cloudrun-deploy/resources/: cloud-run-service.yaml
mekong/cloudfunctions/dockerfiles/: cloudfunctions.dockerfile
mekong/database/: OWNERS
mekong/grist/: OWNERS
mekong/grist/helm-deploy/: skaffold-grist.yaml
mekong/movement/: OWNERS  README.md
miniapps/comparator/: README.md  app.py  prompt.txt  requirements.txt  test_data.yaml
miniapps/deployment/: .dockerignore  Dockerfile  docker-compose.yaml  nginx.conf
miniapps/src/: package-lock.json  package.json
network/: docker-compose.yaml
nginx/: docker-compose.yaml  nginx.conf
telegram/: Dockerfile  docker-compose.yaml  main.py  nginx.conf  skaffold.yaml  startup.py  startup.sh
telegram-bots/anathema/: Dockerfile  docker-compose.yaml  requirements.txt
telegram/app/: README.md  command_registry.py  commands.yaml  config.example  main.py  requirements.txt  run.py  session_manager.py  utils.py
utils/: generate_strong_password.sh
vultr/: controller.py  setup.sh  vultr.sh
(+123 files in other folders)
